# ambition

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Dockerfile  README  README.md  meson.build  vala-lint.conf
ambition-bin/: CMakeLists.txt
ambition-bin/Plugin/: HttpPluginService.vala  IPluginService.vala  PluginResult.vala
ambition-bin/Utility/: DispatchBuilder.vala  Plugin.vala  Run.vala  Util.vala
examples/Parchment/src/: Application.vala  CMakeLists.txt  meson.build
examples/Parchment/src/Controller/: Admin.vala  Callback.vala  Entries.vala
examples/Parchment/src/Form/: Entry.vala  Profile.vala  Reply.vala
examples/Parchment/test/: ApplicationTest.vala  CMakeLists.txt  InitializeTests.vala
examples/Skra/: .gitignore  CMakeLists.txt  meson.build
examples/Skra/config/: actions.conf  build.conf  plugins.conf  skra.conf
examples/Skra/default/: index
examples/Skra/src/: Application.vala  CMakeLists.txt  Main.vala  meson.build
examples/Skra/src/Controller/: Auth.vala  Root.vala  Wiki.vala
examples/Skra/src/Form/: Login.vala
examples/Skra/src/Model/: WikiMarkdown.vala  WikiNode.vala
examples/Skra/static/css/: skra.css
examples/Skra/test/: meson.build
libambition/: ActionBuilder.vala  ActionMethod.vala  App.vala  CMakeLists.txt  Component.vala  Config.vala  Cookie.vala  Dispatcher.vala  DispatcherUtils.vala  RequestFile.vala  State.vala  TemplateCompiler.vala
libambition/Authorization/: Authorize.vala  Builder.vala
libambition/Authorization/PasswordType/: SHA1.vala
libambition/Authorization/User/: Htpasswd.vala
libambition/CoreView/: File.vala  JSON.vala  None.vala  Redirect.vala
libambition/Engine/: Base.vala  Raw.vala
libambition/Form/: CheckboxGroupInput.vala  FormDefinition.vala  SubmitButton.vala  TextInput.vala  Validator.vala
libambition/PluginSupport/: IPlugin.vala  SessionPlugin.vala
libambition/Session/: Interface.vala
libambition/Testing/: Helper.vala  TestResponse.vala
optional/plugin-couchdb/test/: CMakeLists.txt  CouchdbTest.vala
optional/textcaptcha/test/: CMakeLists.txt
share/: CMakeLists.txt  meson.build
share/ambition-framework/scaffold/: CMakeLists.txt  manifest.json  meson.build
src/ambition-bin/: Binary.vala  CMakeLists.txt  Shell.vala  meson.build
src/ambition-bin/Plugin/: LocalPluginService.vala  PluginManifest.vala  PluginResult.vala
src/ambition-bin/Utility/: Creator.vala  Monitor.vala  Plugin.vala  ScaffoldManifest.vala  Shell.vala  Util.vala
src/libambition/: Action.vala  ActionBuilder.vala  ActionMethod.vala  Actions.vala  App.vala  Application.vala  BacktraceReporter.vala  Build.vala  CMakeLists.txt  Component.vala  Config.vala  ControllerMethod.vala  Cookie.vala  Dispatcher.vala  DispatcherUtils.vala  HttpMethod.vala  IActionFilter.vala  Logger.vala  Request.vala  RequestFile.vala  Response.vala  Result.vala  Route.vala  Stash.vala  State.vala  TemplateCompiler.vala  ambition-0.1.deps  ambition-0.2.deps  ambition-0.2.pc.cmake  meson.build
src/libambition/Authorization/: Authorize.vala  Builder.vala  IAuthorizer.vala  IPasswordType.vala  IUser.vala
src/libambition/Controller/: Static.vala
src/libambition/CoreView/: File.vala  JSON.vala  None.vala  RawString.vala  Redirect.vala  Template.vala
src/libambition/Engine/: Base.vala  Raw.vala  Test.vala
src/libambition/Form/: Button.vala  CheckboxGroupInput.vala  FieldRenderer.vala  FormDefinition.vala  GroupInput.vala  HiddenInput.vala  PasswordInput.vala  RadioGroupInput.vala  ResetButton.vala  SelectGroupInput.vala  SubmitButton.vala  Tag.vala  TextInput.vala  Textarea.vala  Validator.vala
src/libambition/Plugin/: HttpPluginService.vala  IPluginService.vala  LocalPluginService.vala  PluginManifest.vala  PluginResult.vala
src/libambition/PluginSupport/: IPlugin.vala  PluginLoader.vala
src/libambition/Serializer/: ErrorMessage.vala  HTML.vala  ISerializer.vala  JSON.vala  JSONNode.vala  ResponseHelper.vala  XML.vala
src/libambition/Session/: IStorable.vala  Interface.vala  SessionPlugin.vala  StorableFile.vala  StorableMemory.vala
src/libambition/Testing/: AbstractTestCase.vala  Helper.vala  TestResponse.vala
src/libambition/Utility/: Clean.vala  Creator.vala  IUtility.vala  Monitor.vala  Plugin.vala  Run.vala  Scaffold.vala  ScaffoldManifest.vala  Utility.vala  UtilityLoader.vala
src/optional/engine-scgi/: CMakeLists.txt  SCGI.vala  SCGIUtility.vala  ambition-engine-scgi-0.1.0.deps  documentation.md  manifest.json
src/optional/plugin-almanna/: AlmannaPlugin.vala  AlmannaSession.vala  AlmannaUtility.vala  AuthorizerAlmanna.vala  CMakeLists.txt  StorableAlmanna.vala  UserAlmanna.vala  ambition-plugin-almanna-0.1.0.deps  documentation.md  manifest.json
src/optional/plugin-couchdb/: CMakeLists.txt  Couch.vala  Document.vala  SessionDocument.vala  ambition-plugin-couchdb-0.1.0.deps  couchdb-glib-1.0.vapi  documentation.md  manifest.json
src/optional/plugin-servicething/: CMakeLists.txt  Service.vala  ServiceThingPlugin.vala  ambition-plugin-servicething-0.1.0.deps  documentation.md  manifest.json
src/optional/plugin-twitter-bootstrap/: CMakeLists.txt  TwitterBootstrapPlugin.vala  ambition-plugin-twitterbootstrap-0.1.0.deps  documentation.md  manifest.json
src/optional/textcaptcha/: CMakeLists.txt  TextCaptcha.vala  ambition-helper-textcaptcha-0.1.0.deps  documentation.md  manifest.json
test/: CMakeLists.txt  action.vala  actionbuilder.vala  app.vala  authorizer.vala  build.vala  config.vala  controller_static.vala  controllermethod.vala  cookie.vala  coreview_file.vala  coreview_json.vala  coreview_none.vala  coreview_rawstring.vala  coreview_redirect.vala  dispatcher.vala  engine.vala  form.vala  formfield.vala  formvalidator.vala  httpmethod.vala  meson.build  password_type.vala  pluginloader.vala  pluginmanifest.vala  request.vala  route.vala  serializer_json.vala  serializer_responsehelper.vala  session.vala  stash.vala  templatecompiler.vala  test-runner.vala
test/assets/: build.conf  example.conf  flat_file  formsubclass.vala  htpasswd  serializer-test-classes.vala
(+173 files in other folders)
