# file(['COPY', cmake_source_dir, '/share/ambition-framework', 'DESTINATION', cmake_binary_dir, '/share'])
# install(['DIRECTORY', cmake_binary_dir, '/share/ambition-framework', 'DESTINATION', cmake_install_prefix, '/share'])

install_subdir(
  'ambition-framework',
  install_dir: 'share',
  strip_directory : false
)
